syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2693
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message TakeAchievementRewardReq {
	repeated uint32 id_list = 2;
}
